# LongestEdgeBisection2D

./: .appveyor.yml  .gitmodules  .travis.yml  CMakeLists.txt  README.md  leb.cpp
assets/: ch_Trex-walk-00.ccm  ch_Trex-walk-01.ccm  ch_Trex-walk-02.ccm  ch_Trex-walk-03.ccm  ch_Trex-walk-04.ccm  ch_Trex-walk-05.ccm  ch_Trex-walk-06.ccm  ch_Trex-walk-07.ccm  ch_Trex-walk-08.ccm  ch_Trex-walk-09.ccm  ch_Trex-walk-10.ccm  ch_Trex-walk-11.ccm  ch_Trex-walk-12.ccm  ch_Trex-walk-13.ccm  ch_Trex-walk-14.ccm  ch_Trex-walk-15.ccm  ch_Trex-walk-16.ccm  ch_Trex-walk-17.ccm  ch_Trex-walk-18.ccm  ch_Trex-walk-19.ccm  ch_Trex-walk-20.ccm  ch_Trex-walk-21.ccm  ch_Trex-walk-22.ccm  ch_Trex-walk-23.ccm  ch_Trex-walk-24.ccm  ch_Trex-walk-25.ccm  ch_Trex-walk-26.ccm  ch_Trex-walk-27.ccm  ch_Trex-walk-28.ccm  ch_Trex-walk-29.ccm  ch_Trex-walk-30.ccm  ch_Trex-walk-31.ccm  ch_Trex-walk-32.ccm  ch_Trex-walk-33.ccm  ch_Trex-walk-34.ccm  ch_Trex-walk-35.ccm  ch_Trex-walk-36.ccm  ch_Trex-walk-37.ccm  ch_Trex-walk-38.ccm  ch_Trex-walk-39.ccm  (+8 more)
catmullclark/: CatmullClarkTessellation.h  dj_algebra.h  viewer.cpp
catmullclark/shaders/: AdaptiveLodRender.glsl  AdaptiveLodRender_Common.glsl  AdaptiveLodRender_Wire.glsl  CageRender.glsl  CatmullClarkTessellation.glsl  FrustumCulling.glsl  SubdRender.glsl  Tessellation.glsl  UniformLodRender.glsl  Viewer.glsl  cc_Displace.glsl  cct_Dispatcher.glsl
shaders/: leb.glsl
subdivision/: subdivision.cpp
subdivision/shaders/: leb_dispatcher.glsl  subdivision.glsl  target.glsl  triangles.glsl
terrain/: terrain.cpp
terrain/glad/: glad.c  glad.h
terrain/shaders/: BrunetonAtmosphere.glsl  NodeCount.glsl  Sky.glsl  TerrainBatcher.glsl  TerrainRenderCS.glsl  TerrainRenderCS_Wire.glsl  TerrainRenderCommon.glsl  TerrainRenderGS.glsl  TerrainRenderGS_Wire.glsl  TerrainRenderMS.glsl  TerrainRenderTS.glsl  TerrainRenderTS_Wire.glsl  TerrainTopView.glsl  TerrainUpdateCS.glsl  ToneMapping.glsl  Viewer.glsl
